--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+}
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h1{
+  text-decoration: underline;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.buttons{
+  display: flex;
+  gap: 14px;
+  margin-top: 80vh;
+
+}
+.btn{
+  font-size: 16px;
+  padding:6px 8px;
+  border-radius: 6px;
+  background-color: black;
+  color:whitesmoke;
+}
+ 
